# pylcloud

./: .env.example  .gitignore  README.md  activate.bat  pyproject.toml  requirements.txt
pylcloud/: __init__.py
pylcloud/_legacy/nosql/src/: NoSQLElasticsearch.py
pylcloud/_legacy/yessql/src/: YesSQL.py
pylcloud/_legacy/yessql/test/: main.py
pylcloud/aws/: __init__.py
pylcloud/aws/src/: AWS.py  AWSBedrockKnowledgeBase.py  AWSBedrockModels.py  AWSECR.py  AWSS3.py  AWSTranscribe.py
pylcloud/aws/test/: anthropic.py  ecr.py  main.py
pylcloud/database/: __init__.py
pylcloud/database/src/: Database.py  DatabaseElasticsearch.py  DatabaseMongoDB.py  DatabaseMySQL.py  DatabaseOpenSearch.py  DatabasePostgreSQL.py  DatabaseSQLite.py  docker-compose-database.yml  docker-compose-elasticsearch.yml  docker-compose-postgres.yml
pylcloud/database/src/document/: DatabaseDocument.py  DatabaseDocumentMongoDB.py
pylcloud/database/src/graph/: DatabaseGraph.py  DatabaseGraphJenafuseki.py  DatabaseGraphNeo4j.py
pylcloud/database/src/relational/: DatabaseRelational.py  DatabaseRelationalMySQL.py  DatabaseRelationalPostgreSQL.py  DatabaseRelationalSQLite.py  docker-compose-postgres.yml
pylcloud/database/src/search/: .env.example  (+8 more)
pylcloud/database/test/: elasticsearch_test.py  main.py  opensearch_test.py  postgresql_test.py  s3vectors_test.py  test_elasticsearch.py  test_mongodb.py  test_mysql.py  test_opensearch.py  test_postgresql.py  test_sqlite.py
pylcloud/gpt/: __init__.py
pylcloud/gpt/src/: GPT.py  GPTAWS.py  GPTAzure.py  GPTServer.py  README.md
pylcloud/gpt/test/: main.py  test_gptaws.py
pylcloud/mysql/src/: MySQLInsert.py  MySQLManage.py  MySQLRemove.py  MySQLRequest.py  connection.py  insertdata.py  manageschemas.py  removedata.py  requestdata.py
pylcloud/nosql/: __init__.py
pylcloud/nosql/src/: NoSQL.py  NoSQLElasticsearch.py  NoSQLMongoDB.py
pylcloud/nosql/test/: main.py
pylcloud/s3/src/: S3Client.py
pylcloud/storage/: __init__.py
pylcloud/storage/src/: Storage.py  StorageMinIO.py  StorageMiniIO.py  StorageS3.py  StorageServer.py
pylcloud/storage/test/: main.py  mini-io.py  minio.py
pylcloud/yessql/: __init__.py
pylcloud/yessql/doc/: README.md
pylcloud/yessql/src/: YesSQL.py  YesSQLMySQL.py  YesSQLSQLite.py
pylcloud/yessql/test/: main.py
test/: main.py  storageserver_test.py
(+5 files in other folders)
