[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylcloud"
version = "0.1.0"
description = "Deployment tools"
readme = "README.md"
requires-python = ">=3.6"
authors = [
    { name="Maxime BLIDI", email="blidi.maxime@gmail.com" }
]
dependencies = [
    "tqdm",
    "python-dotenv==1.0.1",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
all = ["pylcloud[database,storage,gpt]"]
database = [
    "mysql-connector-python", 
    "psycopg[binary]>=3.1",
    "boto3", 
    "elasticsearch", 
    "opensearch-py"
]
storage = ["boto3"]
gpt = [
    "nltk", 
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
